--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=LCK_News
 
 spring.datasource.url=jdbc:mysql://localhost:3306/lck
 spring.datasource.username=root
-spring.datasource.password=@qwer0828
+spring.datasource.password=wogus980410!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
